# analytics-platform

./: .dockerignore  README.md  dagster.yaml  pyproject.toml
docker/: Dockerfile  compose.yaml
projects/portfolio-management/: Dockerfile  pyproject.toml
projects/portfolio-management/src/portfolio_management/: definitions.py
projects/portfolio-management/src/portfolio_management/defs/: asset_1.py  asset_2.py
src/analytics_platform/: definitions.py
