[project]
name = "portfolio_management"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
]

[project.entry-points]
"dagster_dg.plugin" = { portfolio_management = "portfolio_management.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "portfolio_management"


[tool.dg.project.python_environment]
active = true
